--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,22 @@
 					<path>/CounterWebApp</path>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>exec-maven-plugin</artifactId>
+				<groupId>org.codehaus.mojo</groupId>
+				<executions>
+					<execution>
+						<id>Version Calculation</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>${basedir}/test.sh</executable>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin> 
 
 		</plugins>
 
